classDiagram
    direction TB
    class ITransport {
        <<interface>>
        +Start() / Close() / WaitClosed()
        +AsyncRead() shared_ptr~Awaitable~Datagram~~
        +AsyncWrite(Datagram) Coro::Result~void~
        +LastError() / CurrentLinkState()
    }
    class TcpTransport {
        <<编译面内 · ADR-0011 重构完毕>>
        +socket 管理泵 + 读写双队列
        +连接管理【内建】：固定间隔重连、不自终
        +唯一时间量 silence_timeout：等连上/读静默/退避
    }
    class UdpTransport {
        <<编译面内 · ADR-0007 样板>>
        +报文+地址（peer）
        +socket 管理泵 + 读写双队列
        +silence_timeout：读超时兼重试间隔
    }
    class SerialTransport {
        <<编译面内 · ADR-0012 重构完毕>>
        +串口字节流
    }
    class DdsTransport {
        +listener 在外来线程直推读队列（无泵 fiber）
        +写侧一条专属 OS 线程消费写队列
        +DeclareWriter / DeclareReader（七方法之外）
    }
    class TcpServer {
        <<不在编译面内>>
        +accept 每连接一 node
    }
    class IDdsProvider {
        <<interface>>
        +Init/Shutdown/Subscribe/Publish
    }

    ITransport <|.. TcpTransport
    ITransport <|.. UdpTransport
    ITransport <|.. SerialTransport
    ITransport <|.. DdsTransport
    DdsTransport *-- IDdsProvider : 组合
    TcpServer ..> TcpTransport : 每连接接管
    note for ITransport "读写刻意不对称：读交出等待器句柄，\n超时/取消/扇出由调用方自理；\n写入队即返，结果只落 LastError()"
    note for UdpTransport "ADR-0007/0008 已落地，是其余介质跟进的样板；\n【TCP(0011)/ 串口(0012)/ DDS(0013)均已跟进完毕】\n四者队列均为有界 1024 + 静默丢最旧，\n不归因、不可观测（ADR-0014）"
